2007-12-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in: Enable explicit library dependencies on Mac
	OS X

	Dynamic linking on Mac OS X requires passing explicit library
	dependencies to the linker, even if libtool thinks it is not
	necessary. Therefore "enable_explicit_deps" is set to "yes"
	for this operating system. The solution is taken from pkg-config
	Portfile from macports.

	* itpp/base/random.cpp: Use tgamma() function instead of
	deprecated ambiguous gamma()

	* itpp/base/math/elem_math.h: Make sure itpp::gamma() use correct
	gamma implementation

	BTW, denote that this function name is deprecated due to its
	different implementation (and meaning) in BSD and glibc.

	* configure.ac.in: std::isfinite, std::isinf and std::isnan are
	broken on FreeBSD

	The use of these functions on FreeBSD with GCC 3.4.x compilers
	causes infinite loops or segmentation faults in bessel_test.
	Therefore, do not check for these functions and override them
	with local inlined implementations defined in
	itpp/base/math/main.h.

	* configure.ac.in, itpp/base/bessel/gamma.cpp
	itpp/base/math/misc.h itpp/config_msvc.h
	itpp/stat/mog_generic.cpp: Add full support of std::isfinite(),
	std::isinf() and std::isnan()

	Instead of using isnan(), isinf() C99 macros and deprecated
	finite() function switch to their equivalents in std library. This
	should solve recent portability problems under MinGW/MSYS.

	* itpp/base/bessel/hyperg.cpp, itpp/base/bessel/iv.cpp,
	itpp/base/bessel/jv.cpp, itpp/base/bessel/k1.cpp,
	itpp/base/bessel/kn.cpp: Unify warning messages

	* itpp/base/bessel/airy.cpp, itpp/base/bessel/bessel_internal.h,
	itpp/base/bessel/chbevl.cpp, itpp/base/bessel/hyperg.cpp,
	itpp/base/bessel/i0.cpp, itpp/base/bessel/i1.cpp,
	itpp/base/bessel/iv.cpp, itpp/base/bessel/jv.cpp,
	itpp/base/bessel/k0.cpp, itpp/base/bessel/k1.cpp,
	itpp/base/bessel/kn.cpp, itpp/base/bessel/polevl.cpp: Clean up
	"include" and "using namespace" statements
