@@ -27,17 +27,17 @@ AC_SUBST(GENERIC_LIBRARY_VERSION)
 
 # Check for host and disable building a shared library in Windows
 AC_CANONICAL_HOST
-case $host in
-  *-*-msdos* | *-*-go32* | *-*-mingw32* | *-*-cygwin* | *-*-windows*)
+case $host_os in
+  cygwin* | mingw* | pw32*)
     AC_DISABLE_SHARED
     AC_ENABLE_STATIC
     ;;
-  *-*-freebsd5* | *-*-freebsd6*)
+  freebsd5* | freebsd6*)
     AC_ENABLE_SHARED
     AC_DISABLE_STATIC
     freebsd_broken_std_isnan=yes
     ;;
-  *-*-darwin*)
+  darwin*)
     AC_ENABLE_SHARED
     AC_DISABLE_STATIC
     enable_explicit_deps=yes
@@ -70,7 +70,7 @@ case $enable_explicit_deps in
   auto)
     deplibs_check_method=`(./libtool --config; echo 'eval echo $deplibs_check_method') | sh`
     if test "x$deplibs_check_method" != xpass_all || \
-       test "x$enable_shared" = xno ; then
+       test "x$enable_shared" = xno; then
       enable_explicit_deps=yes
     else
       enable_explicit_deps=no
